--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'com.googlecode.libphonenumber:libphonenumber:8.12.31'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr353'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.5.10'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
